--- a/lecm-contracts/repo/src/main/config/reportdefinitions/approval-list.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/approval-list.jrxml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Simple" pageWidth="842" pageHeight="595" orientation="Landscape" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="28e61b22-f23c-49c3-ba14-4928c3b8793a">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="ApprovalList" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" isFloatColumnFooter="true" uuid="28e61b22-f23c-49c3-ba14-4928c3b8793a">
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
@@ -127,10 +127,11 @@
 				</textElement>
 				<textFieldExpression><![CDATA["К договору проект № "+ $F{col_Doc.ProjectNum} + ", версия № "+ $F{col_AproveList.Version}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement uuid="92c94d2f-ae2f-45d6-826a-4fe022f0baa4" x="2" y="31" width="396" height="30"/>
+			<textField isStretchWithOverflow="true">
+				<reportElement uuid="92c94d2f-ae2f-45d6-826a-4fe022f0baa4" stretchType="RelativeToTallestObject" x="2" y="31" width="396" height="30"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
+					<paragraph spacingBefore="5" spacingAfter="5"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Исполнитель: "+ $F{col_ExecEmployee.LastName}+ " "+ ($F{col_ExecEmployee.MiddleName} + " ").substring(0,1)+ "."+ (""+ $F{col_ExecEmployee.FirstName}).substring(0,1)+ ", "+ $F{col_ExecEmployee.StaffPosition.Name} + ", "+ $F{col_Item.Employee.Unit.Name}]]></textFieldExpression>
 			</textField>
@@ -195,16 +196,16 @@
 				<textFieldExpression><![CDATA["Дата согласования"]]></textFieldExpression>
 			</textField>
 			<line>
-				<reportElement uuid="ab9b1fbb-c17e-4ac0-8727-86464b45ae48" x="33" y="0" width="1" height="29"/>
+				<reportElement uuid="ab9b1fbb-c17e-4ac0-8727-86464b45ae48" stretchType="RelativeToBandHeight" x="33" y="0" width="1" height="29"/>
 			</line>
 			<line>
-				<reportElement uuid="32c28a06-576c-407d-aaa4-5c406c4d913b" x="233" y="0" width="1" height="29"/>
+				<reportElement uuid="32c28a06-576c-407d-aaa4-5c406c4d913b" stretchType="RelativeToBandHeight" x="233" y="0" width="1" height="29"/>
 			</line>
 			<line>
-				<reportElement uuid="dc287e8e-5e02-4e74-b748-a91c4422df28" x="395" y="0" width="1" height="29"/>
+				<reportElement uuid="dc287e8e-5e02-4e74-b748-a91c4422df28" stretchType="RelativeToBandHeight" x="395" y="0" width="1" height="29"/>
 			</line>
 			<line>
-				<reportElement uuid="5b6d0115-f241-4433-9064-4b28fe16e551" x="703" y="0" width="1" height="29"/>
+				<reportElement uuid="5b6d0115-f241-4433-9064-4b28fe16e551" stretchType="RelativeToBandHeight" x="703" y="0" width="1" height="29"/>
 			</line>
 		</band>
 	</columnHeader>
@@ -212,10 +213,10 @@
 		<band height="26" splitType="Immediate">
 			<printWhenExpression><![CDATA[$V{REPORT_COUNT} <= 200]]></printWhenExpression>
 			<line>
-				<reportElement uuid="761758be-0e43-429b-8ca0-cd71cfc60d5f" x="0" y="25" width="801" height="1"/>
+				<reportElement uuid="761758be-0e43-429b-8ca0-cd71cfc60d5f" positionType="FixRelativeToBottom" x="0" y="25" width="801" height="1"/>
 			</line>
 			<frame>
-				<reportElement uuid="1e092e56-8305-48da-8ce3-c4deba187eda" style="styleOdd" x="2" y="2" width="798" height="23" backcolor="#FFFFFF"/>
+				<reportElement uuid="1e092e56-8305-48da-8ce3-c4deba187eda" style="styleOdd" stretchType="RelativeToBandHeight" x="2" y="2" width="798" height="23" isPrintWhenDetailOverflows="true" backcolor="#FFFFFF"/>
 				<textField isBlankWhenNull="true">
 					<reportElement uuid="d2014534-0ee4-43cb-82d6-fd1d4e4ed21a" x="1" y="2" width="30" height="20"/>
 					<textElement textAlignment="Center">
@@ -224,79 +225,82 @@
 					</textElement>
 					<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" x="34" y="2" width="198" height="20"/>
+				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+					<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" stretchType="RelativeToTallestObject" x="34" y="2" width="198" height="20" isPrintWhenDetailOverflows="true"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
+						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{col_Item.Employee.LastName}+ " "+ ($F{col_Item.Employee.MiddleName}+ " ").substring( 0, 1 )+ "."+ ($F{col_Item.Employee.FirstName}+ " ").substring(0,1) + ", "+ $F{col_Item.Employee.StaffPosition.Name} + ", "+ $F{col_Item.Employee.Unit.Name}]]></textFieldExpression>
 				</textField>
-				<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
-					<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" x="705" y="2" width="90" height="20"/>
+				<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="false">
+					<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" stretchType="RelativeToTallestObject" x="705" y="2" width="90" height="20" isPrintWhenDetailOverflows="true"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{col_Item.ApproveDate}]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" x="398" y="2" width="304" height="20"/>
+				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+					<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" stretchType="RelativeToTallestObject" x="398" y="2" width="304" height="20" isPrintWhenDetailOverflows="true"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
+						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{col_Item.ApproveNotes}]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" x="233" y="2" width="160" height="20" isPrintInFirstWholeBand="true"/>
+				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" stretchType="RelativeToTallestObject" x="233" y="2" width="160" height="20" isPrintInFirstWholeBand="true" isPrintWhenDetailOverflows="true"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
+						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{col_Item.ApproveResult}]]></textFieldExpression>
 				</textField>
 			</frame>
 			<line>
-				<reportElement uuid="e99b830f-4006-48dc-956a-8c36c8c84003" x="0" y="0" width="1" height="25"/>
+				<reportElement uuid="e99b830f-4006-48dc-956a-8c36c8c84003" stretchType="RelativeToBandHeight" x="0" y="0" width="1" height="25"/>
 			</line>
 			<line>
-				<reportElement uuid="a132f0be-1c6c-495b-aa33-910ea8e4cfa2" x="33" y="0" width="1" height="25"/>
+				<reportElement uuid="a132f0be-1c6c-495b-aa33-910ea8e4cfa2" stretchType="RelativeToBandHeight" x="33" y="0" width="1" height="25"/>
 			</line>
 			<line>
-				<reportElement uuid="496c9e03-84fb-42c4-891c-8284c84bd4a4" x="233" y="0" width="1" height="25"/>
+				<reportElement uuid="496c9e03-84fb-42c4-891c-8284c84bd4a4" stretchType="RelativeToBandHeight" x="233" y="0" width="1" height="25"/>
 			</line>
 			<line>
-				<reportElement uuid="e029505f-e152-4820-adb0-d5926a77a516" x="395" y="0" width="1" height="25"/>
+				<reportElement uuid="e029505f-e152-4820-adb0-d5926a77a516" stretchType="RelativeToBandHeight" x="395" y="0" width="1" height="25"/>
 			</line>
 			<line>
-				<reportElement uuid="36edc890-8ccf-4680-a12c-0de338d828ac" x="703" y="0" width="1" height="25"/>
+				<reportElement uuid="36edc890-8ccf-4680-a12c-0de338d828ac" stretchType="RelativeToBandHeight" x="703" y="0" width="1" height="25"/>
 			</line>
 			<line>
-				<reportElement uuid="1c3a02a2-227e-47e4-8d87-2dc5fdb552df" x="800" y="0" width="1" height="25"/>
+				<reportElement uuid="1c3a02a2-227e-47e4-8d87-2dc5fdb552df" stretchType="RelativeToBandHeight" x="800" y="0" width="1" height="25"/>
 			</line>
 		</band>
 	</detail>
 	<columnFooter>
 		<band height="40" splitType="Stretch">
-			<textField>
-				<reportElement uuid="d0f946b7-8631-4585-ae38-030f2ca941b3" x="402" y="0" width="396" height="17"/>
+			<textField isStretchWithOverflow="true">
+				<reportElement uuid="d0f946b7-8631-4585-ae38-030f2ca941b3" stretchType="RelativeToTallestObject" x="402" y="0" width="396" height="17" isPrintInFirstWholeBand="true"/>
 				<textElement textAlignment="Left">
 					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
+					<paragraph spacingBefore="5" spacingAfter="5"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Результат: "+$F{col_AproveList.ApproveResult}]]></textFieldExpression>
 			</textField>
-			<textField>
-				<reportElement uuid="e219c235-6444-4008-97a2-6fc0d01e1bbd" x="402" y="18" width="198" height="17"/>
+			<textField isStretchWithOverflow="true">
+				<reportElement uuid="e219c235-6444-4008-97a2-6fc0d01e1bbd" x="402" y="18" width="198" height="17" isPrintInFirstWholeBand="true"/>
 				<textElement textAlignment="Left">
 					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
+					<paragraph spacingBefore="5" spacingAfter="5"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Дата согласования по документу: "]]></textFieldExpression>
 			</textField>
-			<textField pattern="dd/MM/yyyy" isBlankWhenNull="false">
-				<reportElement uuid="62759da2-8339-49e9-ac58-3c2503f28f06" x="600" y="18" width="198" height="17"/>
+			<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="false">
+				<reportElement uuid="62759da2-8339-49e9-ac58-3c2503f28f06" x="600" y="18" width="198" height="17" isPrintInFirstWholeBand="true"/>
 				<textElement textAlignment="Left">
 					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
+					<paragraph spacingBefore="5" spacingAfter="5"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{col_AproveList.ApproveEnd}]]></textFieldExpression>
 			</textField>
