ALF-838: Редизайн главного окна договоров
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2469 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-tasks.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-tasks.css
@@ -8,8 +8,18 @@
     color: #cc6600;
 }
 
-.dashlet.contracts-tasks .my-task {
+.dashlet.contracts-tasks .my-task,
+.dashlet.contracts-tasks .no-tasks {
     padding: 10px 0;
+}
+.dashlet.contracts-tasks .no-tasks .img {
+    width: 50px;
+    height: 100px;
+    float: left;
+}
+.dashlet.contracts-tasks h3 {
+    font-weight: bold;
+    padding-bottom: 10px;
 }
 .dashlet.contracts-tasks .my-task .workflow-date {
     font-size: 12px;
