--- a/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-list.css
+++ b/lecm-contracts/share/src/main/webapp/css/lecm-contracts/contracts-list.css
@@ -10,3 +10,13 @@
 .yui-gc div.first {
     width: 100%;
 }
+#yui-main div.datalist-toolbar {
+    border: 0;
+}
+#yui-main div.datalist-toolbar div.header-bar,
+#yui-main #lecm-content-ft {
+    background: #f2f2f2;
+}
+#yui-main div.datalist-toolbar div.header-bar div.new-row span.first-child {
+    background-image: url("/share/res/images/lecm-contracts/alf_contract_add.png");
+}
