ALF-838: Редизайн главного окна договоров
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2473 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
+++ b/lecm-theme/share/src/main/webapp/themes/lecmTheme/presentation.css
@@ -80,6 +80,7 @@ a:hover {
     word-break: break-all;
     letter-spacing: -1px;
     background-position: 12px 4px;
+    cursor: pointer;
 }
 #bd #lecm-menu button {
     width: 56px;
