--- a/lecm-contracts/repo/src/main/config/reportdefinitions/approval-discipline.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/approval-discipline.jrxml
@@ -3,7 +3,7 @@
 	<property name="ireport.zoom" value="1.0"/>
 	<property name="ireport.x" value="0"/>
 	<property name="ireport.y" value="0"/>
-	<property name="dataSource" value="ru.it.lecm.reports.jasper.DSProdiverApproval"/>
+	<property name="dataSource" value="ru.it.lecm.reports.jasper.DSProdiverApprovalSummaryByPeriod"/>
 	<property name="dataSource2" value="org.nm.jr.extension.datasource.provider.JRCMISDataSourceProvider"/>
 	<style name="styleOdd" mode="Opaque" backcolor="#F4F5F5">
 		<conditionalStyle>
@@ -85,12 +85,12 @@
 			<property name="cmis.user" value="admin"/>
 			<property name="cmis.password" value="111"/>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="8232ed19-763a-4354-a29f-c9f649b31df8" stretchType="RelativeToTallestObject" x="0" y="0" width="800" height="25"/>
+				<reportElement uuid="8232ed19-763a-4354-a29f-c9f649b31df8" x="0" y="0" width="800" height="25"/>
 				<textElement textAlignment="Left">
 					<font fontName="DejaVu Sans Mono" size="14" isBold="true" pdfEncoding="Cp1251"/>
+					<paragraph spacingBefore="5" spacingAfter="5"/>
 				</textElement>
-				<textFieldExpression><![CDATA["за период"+ ($F{col_Period.Start} != null ? msg( " с {0,date,short}", $F{col_Period.Start}) : "") + ($F{col_Period.End} != null ? msg( " по {0,date,short}", $F{col_Period.End}) : "")
-]]></textFieldExpression>
+				<textFieldExpression><![CDATA["за период"+ ($F{col_Period.Start} != null ? msg( " с {0,date,short}", $F{col_Period.Start}) : "") + ($F{col_Period.End} != null ? msg( " по {0,date,short}", $F{col_Period.End}) : "")]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
@@ -188,10 +188,10 @@
 					<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" stretchType="RelativeToTallestObject" x="33" y="2" width="150" height="20"/>
+					<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" stretchType="RelativeToBandHeight" x="33" y="2" width="150" height="20"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
+						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{col_Employee.LastName}+ " "+ ($F{col_Employee.MiddleName}+ " ").substring( 0, 1 )+ "."+ ($F{col_Employee.FirstName}+ " ").substring(0,1) + "."]]></textFieldExpression>
 				</textField>
@@ -204,18 +204,18 @@
 					<textFieldExpression><![CDATA[$F{col_Employee.MissedApproves}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" stretchType="RelativeToTallestObject" x="368" y="2" width="180" height="20"/>
+					<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" stretchType="RelativeToBandHeight" x="368" y="2" width="180" height="20"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
+						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{col_Employee.Unit}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" stretchType="RelativeToTallestObject" x="186" y="2" width="180" height="20" isPrintInFirstWholeBand="true"/>
+					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" stretchType="RelativeToBandHeight" x="186" y="2" width="180" height="20"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
+						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{col_Employee.StaffPosition}]]></textFieldExpression>
 				</textField>
