--- a/lecm-contracts/repo/src/main/config/reportdefinitions/approval-list.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/approval-list.jrxml
@@ -128,7 +128,7 @@
 				<textFieldExpression><![CDATA["К договору проект № "+ $F{col_Doc.ProjectNum} + ", версия № "+ $F{col_AproveList.Version}]]></textFieldExpression>
 			</textField>
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="92c94d2f-ae2f-45d6-826a-4fe022f0baa4" stretchType="RelativeToTallestObject" x="2" y="31" width="396" height="30"/>
+				<reportElement uuid="92c94d2f-ae2f-45d6-826a-4fe022f0baa4" x="2" y="31" width="396" height="30"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
 					<paragraph spacingBefore="5" spacingAfter="5"/>
@@ -226,7 +226,7 @@
 					<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" stretchType="RelativeToTallestObject" x="34" y="2" width="198" height="20" isPrintWhenDetailOverflows="true"/>
+					<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" stretchType="RelativeToBandHeight" x="34" y="2" width="198" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
@@ -234,7 +234,7 @@
 					<textFieldExpression><![CDATA[$F{col_Item.Employee.LastName}+ " "+ ($F{col_Item.Employee.MiddleName}+ " ").substring( 0, 1 )+ "."+ ($F{col_Item.Employee.FirstName}+ " ").substring(0,1) + ", "+ $F{col_Item.Employee.StaffPosition.Name} + ", "+ $F{col_Item.Employee.Unit.Name}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" pattern="dd/MM/yyyy" isBlankWhenNull="false">
-					<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" stretchType="RelativeToTallestObject" x="705" y="2" width="90" height="20" isPrintWhenDetailOverflows="true"/>
+					<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" stretchType="RelativeToBandHeight" x="705" y="2" width="90" height="20"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
@@ -242,7 +242,7 @@
 					<textFieldExpression><![CDATA[$F{col_Item.ApproveDate}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" stretchType="RelativeToTallestObject" x="398" y="2" width="304" height="20" isPrintWhenDetailOverflows="true"/>
+					<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" stretchType="RelativeToBandHeight" x="398" y="2" width="304" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
@@ -250,7 +250,7 @@
 					<textFieldExpression><![CDATA[$F{col_Item.ApproveNotes}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" stretchType="RelativeToTallestObject" x="233" y="2" width="160" height="20" isPrintInFirstWholeBand="true" isPrintWhenDetailOverflows="true"/>
+					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" stretchType="RelativeToBandHeight" x="233" y="2" width="160" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
@@ -281,7 +281,7 @@
 	<columnFooter>
 		<band height="40" splitType="Stretch">
 			<textField isStretchWithOverflow="true">
-				<reportElement uuid="d0f946b7-8631-4585-ae38-030f2ca941b3" stretchType="RelativeToTallestObject" x="402" y="0" width="396" height="17" isPrintInFirstWholeBand="true"/>
+				<reportElement uuid="d0f946b7-8631-4585-ae38-030f2ca941b3" x="402" y="0" width="396" height="17" isPrintInFirstWholeBand="true"/>
 				<textElement textAlignment="Left">
 					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251"/>
 					<paragraph spacingBefore="5" spacingAfter="5"/>
