--- a/lecm-contracts/repo/src/main/config/reportdefinitions/contracts-list.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/contracts-list.jrxml
@@ -212,7 +212,7 @@
 			<frame>
 				<reportElement uuid="1e092e56-8305-48da-8ce3-c4deba187eda" style="styleOdd" stretchType="RelativeToBandHeight" x="1" y="1" width="797" height="24" backcolor="#FFFFFF"/>
 				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-					<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" positionType="Float" stretchType="RelativeToTallestObject" x="197" y="2" width="110" height="20" isPrintWhenDetailOverflows="true"/>
+					<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" stretchType="RelativeToBandHeight" x="197" y="2" width="110" height="20"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="20"/>
@@ -220,7 +220,7 @@
 					<textFieldExpression><![CDATA[$F{col_DocKind}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-					<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" positionType="Float" stretchType="RelativeToTallestObject" x="106" y="2" width="88" height="20" isPrintWhenDetailOverflows="true"/>
+					<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" stretchType="RelativeToBandHeight" x="107" y="2" width="88" height="20"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="20"/>
@@ -235,7 +235,7 @@
 					<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" positionType="Float" stretchType="RelativeToTallestObject" x="35" y="2" width="70" height="20" isPrintInFirstWholeBand="true" isPrintWhenDetailOverflows="true"/>
+					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" stretchType="RelativeToBandHeight" x="35" y="2" width="70" height="20"/>
 					<textElement textAlignment="Right" markup="none">
 						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="20"/>
@@ -243,7 +243,7 @@
 					<textFieldExpression><![CDATA[( ($F{col_Regnum} != null && !"Не присвоено".equals($F{col_Regnum}) )? $F{col_Regnum} : "нет")]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="false">
-					<reportElement uuid="18c1ff17-fd8f-495d-84a4-88e5e3b52b5d" positionType="Float" stretchType="RelativeToTallestObject" x="309" y="2" width="148" height="20" isPrintWhenDetailOverflows="true"/>
+					<reportElement uuid="18c1ff17-fd8f-495d-84a4-88e5e3b52b5d" stretchType="RelativeToBandHeight" x="309" y="2" width="148" height="20"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="20"/>
@@ -267,7 +267,7 @@
 					<textFieldExpression><![CDATA[$F{col_DateEnd}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-					<reportElement uuid="22eefe53-6554-492a-bcd3-2459eca02fce" positionType="Float" stretchType="RelativeToTallestObject" x="599" y="2" width="88" height="20" isPrintWhenDetailOverflows="true"/>
+					<reportElement uuid="22eefe53-6554-492a-bcd3-2459eca02fce" x="604" y="2" width="80" height="20"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="20"/>
@@ -275,7 +275,7 @@
 					<textFieldExpression><![CDATA[$F{col_Executor_Family}+ " "+ ($F{col_Executor_Name}+ " ").substring( 0, 1 )+ "."+ ($F{col_Executor_Otchestvo}+ " ").substring(0,1)]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
-					<reportElement uuid="b8fc6c50-c272-4fda-86c8-c18a502c3205" positionType="Float" stretchType="RelativeToTallestObject" x="690" y="2" width="107" height="20" isPrintWhenDetailOverflows="true"/>
+					<reportElement uuid="b8fc6c50-c272-4fda-86c8-c18a502c3205" x="690" y="2" width="107" height="20" isPrintWhenDetailOverflows="true"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" size="10" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="20"/>
