Сообщение в статусе теперь показывается на новой строчке в списке контактов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2486 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
+++ b/lecm-im/lib/src/main/resources/ru/it/lecm/im/public/standard/iJab.css
@@ -99,6 +99,11 @@ ul, li {
     background-color:#bbe6f3;
 }
 
+/* Статусное сообщение в списке контактов */
+.ijab-contactview-item > .names > span:nth-child(3){
+    display: block;
+}
+
 /*!* ijab UI v2.0.0pre * http://www.ijab.im/ * * Copyright(c) 2009 Hidden * * Date:* Revision:*/
 .ijab-Reference-standard {
     height: 5px;
