--- a/lecm-contracts/repo/src/main/config/reportdefinitions/approval-discipline.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/approval-discipline.jrxml
@@ -175,12 +175,12 @@
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="25" splitType="Stretch">
+		<band height="25" splitType="Immediate">
 			<printWhenExpression><![CDATA[$V{REPORT_COUNT} <= 200]]></printWhenExpression>
 			<frame>
-				<reportElement uuid="1e092e56-8305-48da-8ce3-c4deba187eda" style="styleOdd" stretchType="RelativeToBandHeight" x="2" y="2" width="798" height="23" backcolor="#FFFFFF"/>
+				<reportElement uuid="1e092e56-8305-48da-8ce3-c4deba187eda" style="styleOdd" stretchType="RelativeToTallestObject" x="2" y="2" width="798" height="23" backcolor="#FFFFFF"/>
 				<textField isBlankWhenNull="true">
-					<reportElement uuid="d2014534-0ee4-43cb-82d6-fd1d4e4ed21a" x="1" y="2" width="30" height="20"/>
+					<reportElement uuid="d2014534-0ee4-43cb-82d6-fd1d4e4ed21a" x="1" y="2" width="30" height="20" isRemoveLineWhenBlank="true"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
@@ -188,23 +188,15 @@
 					<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" stretchType="RelativeToBandHeight" x="33" y="2" width="150" height="20"/>
+					<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" x="33" y="2" width="150" height="20" isRemoveLineWhenBlank="true"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{col_Employee.LastName}+ " "+ ($F{col_Employee.MiddleName}+ " ").substring( 0, 1 )+ "."+ ($F{col_Employee.FirstName}+ " ").substring(0,1) + "."]]></textFieldExpression>
 				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" x="550" y="2" width="80" height="20"/>
-					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{col_Employee.MissedApproves}]]></textFieldExpression>
-				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" stretchType="RelativeToBandHeight" x="368" y="2" width="180" height="20"/>
+					<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" x="380" y="2" width="150" height="20" isRemoveLineWhenBlank="true"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
@@ -212,15 +204,23 @@
 					<textFieldExpression><![CDATA[$F{col_Employee.Unit}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" stretchType="RelativeToBandHeight" x="186" y="2" width="180" height="20"/>
+					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" x="200" y="2" width="150" height="20" isRemoveLineWhenBlank="true"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{col_Employee.StaffPosition}]]></textFieldExpression>
 				</textField>
+				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+					<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" x="550" y="2" width="80" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true"/>
+					<textElement textAlignment="Center">
+						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
+					</textElement>
+					<textFieldExpression><![CDATA[$F{col_Employee.MissedApproves}]]></textFieldExpression>
+				</textField>
 				<textField isBlankWhenNull="true">
-					<reportElement uuid="18c1ff17-fd8f-495d-84a4-88e5e3b52b5d" x="634" y="2" width="80" height="20"/>
+					<reportElement uuid="18c1ff17-fd8f-495d-84a4-88e5e3b52b5d" x="634" y="2" width="80" height="20" isRemoveLineWhenBlank="true"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
@@ -228,7 +228,7 @@
 					<textFieldExpression><![CDATA[$F{col_Employee.AvgApproved}]]></textFieldExpression>
 				</textField>
 				<textField pattern="" isBlankWhenNull="true">
-					<reportElement uuid="16d04a8b-5f73-4f50-b514-aa24b6a8f501" x="716" y="2" width="80" height="20"/>
+					<reportElement uuid="16d04a8b-5f73-4f50-b514-aa24b6a8f501" x="716" y="2" width="80" height="20" isRemoveLineWhenBlank="true"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
@@ -260,8 +260,8 @@
 			<line>
 				<reportElement uuid="3d329db8-9e15-4dcd-8eb7-e8e11b8942bf" stretchType="RelativeToBandHeight" x="800" y="0" width="1" height="24"/>
 			</line>
-			<line>
-				<reportElement uuid="2ec4bbbe-9901-4c10-9de5-fdee51acd4f7" positionType="FixRelativeToBottom" stretchType="RelativeToBandHeight" x="0" y="24" width="800" height="1"/>
+			<line direction="BottomUp">
+				<reportElement uuid="2ec4bbbe-9901-4c10-9de5-fdee51acd4f7" positionType="FixRelativeToBottom" x="0" y="24" width="800" height="1"/>
 			</line>
 		</band>
 	</detail>
