--- a/lecm-contracts/repo/src/main/config/reportdefinitions/approval-list.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/approval-list.jrxml
@@ -156,22 +156,22 @@
 			<rectangle>
 				<reportElement uuid="e298a568-777a-4862-a417-1fbacbc1d93d" x="0" y="1" width="800" height="28" backcolor="#DCDCDC"/>
 			</rectangle>
-			<textField>
+			<textField isStretchWithOverflow="true">
 				<reportElement uuid="52e19f23-e656-451b-84d6-f210e47da030" isPrintRepeatedValues="false" x="3" y="3" width="30" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["№"]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true">
-				<reportElement uuid="52e19f23-e656-451b-84d6-f210e47da030" isPrintRepeatedValues="false" x="35" y="3" width="200" height="26"/>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement uuid="52e19f23-e656-451b-84d6-f210e47da030" x="35" y="3" width="200" height="26"/>
 				<textElement textAlignment="Left" verticalAlignment="Top">
 					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
 				</textElement>
 				<textFieldExpression><![CDATA["Согласующий"]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true">
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement uuid="8514e4c9-574d-4cbd-87f1-2afb80a884a2" isPrintRepeatedValues="false" x="238" y="3" width="160" height="26" isPrintInFirstWholeBand="true"/>
 				<textElement textAlignment="Left" verticalAlignment="Top" markup="none">
 					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
@@ -179,7 +179,7 @@
 				</textElement>
 				<textFieldExpression><![CDATA["Результат Согласования"]]></textFieldExpression>
 			</textField>
-			<textField isBlankWhenNull="true">
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 				<reportElement uuid="ad617c43-79fd-4734-84d2-1e37958cfa8c" isPrintRepeatedValues="false" x="400" y="3" width="304" height="26" isPrintInFirstWholeBand="true"/>
 				<textElement textAlignment="Left" verticalAlignment="Top">
 					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
@@ -217,7 +217,7 @@
 			</line>
 			<frame>
 				<reportElement uuid="1e092e56-8305-48da-8ce3-c4deba187eda" style="styleOdd" stretchType="RelativeToBandHeight" x="2" y="2" width="798" height="23" isPrintWhenDetailOverflows="true" backcolor="#FFFFFF"/>
-				<textField isBlankWhenNull="true">
+				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
 					<reportElement uuid="d2014534-0ee4-43cb-82d6-fd1d4e4ed21a" x="1" y="2" width="30" height="20"/>
 					<textElement textAlignment="Center">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
@@ -226,7 +226,7 @@
 					<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" stretchType="RelativeToBandHeight" x="34" y="2" width="198" height="20"/>
+					<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" stretchType="RelativeToBandHeight" x="42" y="2" width="180" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
@@ -242,7 +242,7 @@
 					<textFieldExpression><![CDATA[$F{col_Item.ApproveDate}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" stretchType="RelativeToBandHeight" x="398" y="2" width="304" height="20"/>
+					<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" stretchType="RelativeToBandHeight" x="402" y="2" width="290" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
@@ -250,7 +250,7 @@
 					<textFieldExpression><![CDATA[$F{col_Item.ApproveNotes}]]></textFieldExpression>
 				</textField>
 				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" stretchType="RelativeToBandHeight" x="233" y="2" width="160" height="20"/>
+					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" stretchType="RelativeToBandHeight" x="238" y="2" width="150" height="20"/>
 					<textElement textAlignment="Left">
 						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
