--- a/lecm-contracts/repo/src/main/config/reportdefinitions/approval-discipline.jrxml
+++ b/lecm-contracts/repo/src/main/config/reportdefinitions/approval-discipline.jrxml
@@ -100,14 +100,14 @@
 				<reportElement uuid="e298a568-777a-4862-a417-1fbacbc1d93d" stretchType="RelativeToBandHeight" x="1" y="1" width="800" height="29" backcolor="#DCDCDC"/>
 			</rectangle>
 			<textField>
-				<reportElement uuid="52e19f23-e656-451b-84d6-f210e47da030" isPrintRepeatedValues="false" x="3" y="3" width="30" height="26"/>
+				<reportElement uuid="52e19f23-e656-451b-84d6-f210e47da030" x="3" y="3" width="30" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA["№"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="52e19f23-e656-451b-84d6-f210e47da030" isPrintRepeatedValues="false" x="35" y="3" width="150" height="26"/>
+				<reportElement uuid="52e19f23-e656-451b-84d6-f210e47da030" x="35" y="3" width="150" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
@@ -115,7 +115,7 @@
 				<textFieldExpression><![CDATA["ФИО Сотрудника"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="8514e4c9-574d-4cbd-87f1-2afb80a884a2" isPrintRepeatedValues="false" x="188" y="3" width="180" height="26" isPrintInFirstWholeBand="true"/>
+				<reportElement uuid="8514e4c9-574d-4cbd-87f1-2afb80a884a2" x="188" y="3" width="180" height="26" isPrintInFirstWholeBand="true"/>
 				<textElement textAlignment="Center" verticalAlignment="Top" markup="none">
 					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
@@ -123,7 +123,7 @@
 				<textFieldExpression><![CDATA["Должность Сотрудника"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="ad617c43-79fd-4734-84d2-1e37958cfa8c" isPrintRepeatedValues="false" x="370" y="3" width="180" height="26" isPrintInFirstWholeBand="true"/>
+				<reportElement uuid="ad617c43-79fd-4734-84d2-1e37958cfa8c" x="370" y="3" width="180" height="26" isPrintInFirstWholeBand="true"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
@@ -131,7 +131,7 @@
 				<textFieldExpression><![CDATA["Отдел"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="8ad34c1a-0436-4c27-9c1b-a84c2d955145" isPrintRepeatedValues="false" x="552" y="3" width="80" height="26"/>
+				<reportElement uuid="8ad34c1a-0436-4c27-9c1b-a84c2d955145" x="552" y="3" width="80" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
@@ -139,7 +139,7 @@
 				<textFieldExpression><![CDATA["Кол-во просрочек"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="0d56e8f5-5867-4897-97ab-c9f00c452f45" isPrintRepeatedValues="false" x="636" y="3" width="80" height="26"/>
+				<reportElement uuid="0d56e8f5-5867-4897-97ab-c9f00c452f45" x="636" y="3" width="80" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
@@ -147,7 +147,7 @@
 				<textFieldExpression><![CDATA["Средний срок согласования"]]></textFieldExpression>
 			</textField>
 			<textField isBlankWhenNull="true">
-				<reportElement uuid="8e330edb-4053-4fa9-8b27-970e51dedebf" isPrintRepeatedValues="false" x="718" y="3" width="80" height="26"/>
+				<reportElement uuid="8e330edb-4053-4fa9-8b27-970e51dedebf" x="718" y="3" width="80" height="26"/>
 				<textElement textAlignment="Center" verticalAlignment="Top">
 					<font fontName="DejaVu Sans Mono" isBold="true" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
 					<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
@@ -177,67 +177,64 @@
 	<detail>
 		<band height="25" splitType="Immediate">
 			<printWhenExpression><![CDATA[$V{REPORT_COUNT} <= 200]]></printWhenExpression>
-			<frame>
-				<reportElement uuid="1e092e56-8305-48da-8ce3-c4deba187eda" style="styleOdd" stretchType="RelativeToTallestObject" x="2" y="2" width="798" height="23" backcolor="#FFFFFF"/>
-				<textField isBlankWhenNull="true">
-					<reportElement uuid="d2014534-0ee4-43cb-82d6-fd1d4e4ed21a" x="1" y="2" width="30" height="20" isRemoveLineWhenBlank="true"/>
-					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" x="33" y="2" width="150" height="20" isRemoveLineWhenBlank="true"/>
-					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{col_Employee.LastName}+ " "+ ($F{col_Employee.MiddleName}+ " ").substring( 0, 1 )+ "."+ ($F{col_Employee.FirstName}+ " ").substring(0,1) + "."]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" x="380" y="2" width="150" height="20" isRemoveLineWhenBlank="true"/>
-					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{col_Employee.Unit}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" x="200" y="2" width="150" height="20" isRemoveLineWhenBlank="true"/>
-					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="AtLeast" spacingBefore="5" spacingAfter="5" tabStopWidth="30"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{col_Employee.StaffPosition}]]></textFieldExpression>
-				</textField>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true">
-					<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" x="550" y="2" width="80" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true"/>
-					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{col_Employee.MissedApproves}]]></textFieldExpression>
-				</textField>
-				<textField isBlankWhenNull="true">
-					<reportElement uuid="18c1ff17-fd8f-495d-84a4-88e5e3b52b5d" x="634" y="2" width="80" height="20" isRemoveLineWhenBlank="true"/>
-					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{col_Employee.AvgApproved}]]></textFieldExpression>
-				</textField>
-				<textField pattern="" isBlankWhenNull="true">
-					<reportElement uuid="16d04a8b-5f73-4f50-b514-aa24b6a8f501" x="716" y="2" width="80" height="20" isRemoveLineWhenBlank="true"/>
-					<textElement textAlignment="Center">
-						<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
-						<paragraph lineSpacing="AtLeast" tabStopWidth="30"/>
-					</textElement>
-					<textFieldExpression><![CDATA[$F{col_Employee.AvgMissed}]]></textFieldExpression>
-				</textField>
-			</frame>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement uuid="d2014534-0ee4-43cb-82d6-fd1d4e4ed21a" x="2" y="2" width="30" height="20" isRemoveLineWhenBlank="true"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<paragraph lineSpacing="AtLeast" leftIndent="2" rightIndent="2" spacingBefore="2" spacingAfter="2" tabStopWidth="30"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$V{REPORT_COUNT}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement uuid="d2014534-2ee4-43cb-82d6-fd1d4e4ed21d" x="34" y="2" width="150" height="20" isRemoveLineWhenBlank="true"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<paragraph lineSpacing="AtLeast" leftIndent="2" rightIndent="2" spacingBefore="2" spacingAfter="2" tabStopWidth="30"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{col_Employee.LastName}+ " "+ ($F{col_Employee.MiddleName}+ " ").substring( 0, 1 )+ "."+ ($F{col_Employee.FirstName}+ " ").substring(0,1) + "."]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement uuid="5db5527c-1abb-4aad-a2d8-e699a7cede33" x="381" y="2" width="150" height="20" isRemoveLineWhenBlank="true"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<paragraph lineSpacing="AtLeast" leftIndent="2" rightIndent="2" spacingBefore="2" spacingAfter="2" tabStopWidth="30"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{col_Employee.Unit}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement uuid="3174fdc4-62d4-46eb-9f49-d9fdcc29df25" x="201" y="2" width="150" height="20" isRemoveLineWhenBlank="true"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<paragraph lineSpacing="AtLeast" leftIndent="2" rightIndent="2" spacingBefore="2" spacingAfter="2" tabStopWidth="30"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{col_Employee.StaffPosition}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement uuid="0540390a-1d4a-425e-94fd-cba55ad840b5" x="552" y="2" width="80" height="20" isRemoveLineWhenBlank="true" isPrintWhenDetailOverflows="true"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<paragraph lineSpacing="AtLeast" leftIndent="2" rightIndent="2" spacingBefore="2" spacingAfter="2" tabStopWidth="30"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{col_Employee.MissedApproves}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement uuid="18c1ff17-fd8f-495d-84a4-88e5e3b52b5d" x="636" y="2" width="80" height="20" isRemoveLineWhenBlank="true"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<paragraph lineSpacing="AtLeast" leftIndent="2" rightIndent="2" spacingBefore="2" spacingAfter="2" tabStopWidth="30"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{col_Employee.AvgApproved}]]></textFieldExpression>
+			</textField>
+			<textField isStretchWithOverflow="true" pattern="" isBlankWhenNull="true">
+				<reportElement uuid="16d04a8b-5f73-4f50-b514-aa24b6a8f501" x="718" y="2" width="80" height="20" isRemoveLineWhenBlank="true"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
+					<font fontName="DejaVu Sans Mono" pdfEncoding="Cp1251" isPdfEmbedded="true"/>
+					<paragraph lineSpacing="AtLeast" leftIndent="2" rightIndent="2" spacingBefore="2" spacingAfter="2" tabStopWidth="30"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{col_Employee.AvgMissed}]]></textFieldExpression>
+			</textField>
 			<line>
-				<reportElement uuid="f9fbe77a-e5b8-4167-9458-648467082c84" stretchType="RelativeToBandHeight" x="0" y="0" width="1" height="24"/>
+				<reportElement uuid="f9fbe77a-e5b8-4167-9458-648467082c84" stretchType="RelativeToBandHeight" x="1" y="0" width="1" height="24"/>
 			</line>
 			<line>
 				<reportElement uuid="f3cc4f7f-22dd-4f88-a785-1e9d8ab9afd8" stretchType="RelativeToBandHeight" x="32" y="0" width="1" height="24"/>
@@ -258,18 +255,18 @@
 				<reportElement uuid="769a3c9b-3924-4a9f-83dd-ff1554fec788" stretchType="RelativeToBandHeight" x="717" y="0" width="1" height="24"/>
 			</line>
 			<line>
-				<reportElement uuid="3d329db8-9e15-4dcd-8eb7-e8e11b8942bf" stretchType="RelativeToBandHeight" x="800" y="0" width="1" height="24"/>
+				<reportElement uuid="3d329db8-9e15-4dcd-8eb7-e8e11b8942bf" stretchType="RelativeToBandHeight" x="801" y="0" width="1" height="24"/>
 			</line>
 			<line direction="BottomUp">
-				<reportElement uuid="2ec4bbbe-9901-4c10-9de5-fdee51acd4f7" positionType="FixRelativeToBottom" x="0" y="24" width="800" height="1"/>
+				<reportElement uuid="2ec4bbbe-9901-4c10-9de5-fdee51acd4f7" positionType="FixRelativeToBottom" x="1" y="24" width="800" height="1"/>
 			</line>
 		</band>
 	</detail>
 	<columnFooter>
-		<band height="156" splitType="Stretch"/>
+		<band height="5" splitType="Stretch"/>
 	</columnFooter>
 	<pageFooter>
-		<band height="34" splitType="Stretch">
+		<band height="20" splitType="Stretch">
 			<textField>
 				<reportElement uuid="6df5d2b4-b246-429d-a894-8f1f1d716bbf" x="3" y="0" width="71" height="20"/>
 				<textElement textAlignment="Left">
@@ -280,6 +277,6 @@
 		</band>
 	</pageFooter>
 	<summary>
-		<band height="42" splitType="Stretch"/>
+		<band height="5" splitType="Stretch"/>
 	</summary>
 </jasperReport>
