ALF-860: Неверная верстка формы редактирования
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2531 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
+++ b/lecm-documents/share/src/main/webapp/css/components/document-metadata-form-edit.css
@@ -16,12 +16,13 @@
     margin: 0;
 }
 .yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.form-field div.viewmode-field span.viewmode-value {
+    max-width: 200px;
     padding-left: 0;
 }
 .yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.form-field input[type=text],
 .yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.form-field div.selectone-control select,
 .yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.yui-g div.yui-u div.form-field div.autocomplete-block div.autocompleteCurrentValueDisplayInvisible {
-    width: 230px;
+    width: 225px;
     overflow: hidden;
 }
 .yui-skin-lecmTheme .yui-panel .dashlet-metadata-edit div.form-field > input.date-entry {
