--- a/lecm-base/share/src/main/webapp/css/lecm-base/components/price-control.css
+++ b/lecm-base/share/src/main/webapp/css/lecm-base/components/price-control.css
@@ -16,6 +16,7 @@
     width: 80px;
 }
 .yui-skin-lecmTheme div.dashlet-metadata div.set div.price-control div.price-currency span.viewmode-label,
+.yui-skin-lecmTheme form.dashlet-metadata-edit div.set div.price-control div.price-currency span.viewmode-label,
 .yui-skin-lecmTheme form.dashlet-metadata-edit div.set div.price-control div.price-currency label {
     display: none;
 }
